--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <meta property="og:title" content="GharbiDev | AWS Blog" />
     <meta property="og:description"
         content="Leading provider of cloud and innovative IT consulting services. Visit our blog for the latest industry insights." />
-    <meta property="og:image" content="http://aws.gharbidev.com/src/assets/images/gharbidev-blog.png" />
-    <meta property="og:url" content="https://aws.gharbidev.com" />
+    <meta property="og:image" content="http://blog.gharbidev.com/src/assets/images/gharbidev-blog.png" />
+    <meta property="og:url" content="https://blog.gharbidev.com" />
     <meta property="og:type" content="website" />
 
     <!-- Canonical Tag -->
-    <link rel="canonical" href="https://aws.gharbidev.com" />
+    <link rel="canonical" href="https://blog.gharbidev.com" />
 
     <!--Social Share-->
     <script type="text/javascript"
