--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:title" content="GharbiDev | AWS Blog" />
     <meta property="og:description"
         content="Leading provider of cloud and innovative IT consulting services. Visit our blog for the latest industry insights." />
-    <meta property="og:image" content="http://blog.gharbidev.com/src/assets/images/gharbidev-blog.png" />
+    <meta property="og:image" content="https://blog.gharbidev.com/assets/gharbidev-blog-CfQT9umP.png" />
     <meta property="og:url" content="https://blog.gharbidev.com" />
     <meta property="og:type" content="website" />
 
