--- a/index.html
+++ b/index.html
@@ -55,6 +55,16 @@
     <!-- End Single Page Apps for GitHub Pages -->
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-306R1H98X5"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-306R1H98X5');
+</script>
+
 <body>
     <noscript>
         <strong>We're sorry but Gharbidev doesn't work properly without JavaScript enabled. Please enable it to
