update blog description

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="favicon.ico">
     <title>GharbiDev | Cloud & AWS Blog</title>
-    <meta name="description"
-        content="Expert IT consulting services focusing on cloud solutions and innovative technology. Discover our latest insights on our blog.">
+    <meta name="description" content="Discover our latest insights on our blog.">
     <meta name="keywords" content="IT consulting, cloud solutions, innovative IT, technology blog">
 
     <!-- Open Graph Tags for social media -->
