--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
         }
         var exports = {};
     </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-AMS_HTML"></script>
 </body>
 
 </html>
